--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 databases:
-  - name: postgresql
-    databaseName: postgresql
-    user: postgresql
+  - name: foodhaven
+    databaseName: foodhaven
+    user: foodhaven
     plan: free
 
 services:
   - type: web
-    name: postgresql
+    name: foodhaven
     runtime: ruby
     plan: free
     buildCommand: "./bin/render-build.sh"
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: postgresql
+          name: foodhaven
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
