--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "example": "root"
   },
   "scripts": {
+    "build": "gulp style",
     "open-app": "gulp open-app",
     "start": "npm run open-app",
     "test": "echo \"Error: no test specified\" && exit 1",
